force-app/main/default/objects/Lead/fields/DR_NPN_Distributor__c.field-meta.xml
<CustomField>
    <fullName>DR_NPN_Distributor__c</fullName>
    <description>Deal Reg : Distis</description>
    <label>NPN Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_Deal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Digital Network Distribution Gmbh</fullName>
            </value>
            <value>
                <fullName>Aptec Distribution FFZ LLC</fullName>
            </value>
            <value>
                <fullName>Arrow Electronics</fullName>
            </value>
            <value>
                <fullName>Azwell Plus Co Ltd</fullName>
            </value>
            <value>
                <fullName>BayNex</fullName>
            </value>
            <value>
                <fullName>Carahsoft Technology Corporation</fullName>
            </value>
            <value>
                <fullName>C-Data Computer Ltd.</fullName>
            </value>
            <value>
                <fullName>Clavis Company (Macnica)</fullName>
            </value>
            <value>
                <fullName>Daebo Communication &amp; Systems</fullName>
            </value>
            <value>
                <fullName>Daou Data Corp</fullName>
            </value>
            <value>
                <fullName>Ingram Micro</fullName>
            </value>
            <value>
                <fullName>Inspur</fullName>
            </value>
            <value>
                <fullName>Isolin Trade &amp; Invest Limited</fullName>
            </value>
            <value>
                <fullName>Leadtek Research (Taiwan)</fullName>
            </value>
            <value>
                <fullName>PNY</fullName>
            </value>
            <value>
                <fullName>Rashi Peripherals</fullName>
            </value>
            <value>
                <fullName>Ryoyo Electro Corporation</fullName>
            </value>
            <value>
                <fullName>ScanSource Brasil Distribuidora De</fullName>
            </value>
            <value>
                <fullName>Softbank Commerce &amp; Service Corp</fullName>
            </value>
            <value>
                <fullName>Super Micro</fullName>
            </value>
            <value>
                <fullName>Synnex</fullName>
            </value>
            <value>
                <fullName>Tech Data</fullName>
            </value>
            <value>
                <fullName>Technology Joint Corporation (Elsa)</fullName>
            </value>
            <value>
                <fullName>VSTECS (Singapore) Pte. Ltd</fullName>
                <label>VSTECS (Singapore) Pte. Ltd.</label>
            </value>
            <value>
                <fullName>Zero One Tech Co Ltd</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None at this time</fullName>
            </value>
            <value>
                <fullName>Dawning (Sugon)</fullName>
                <isActive>false</isActive>
                <label>Dawning (Sugon)</label>
            </value>
            <value>
                <fullName>Elsa Japan Co Ltd</fullName>
                <isActive>false</isActive>
                <label>Elsa Japan Co Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>