force-app/main/default/objects/Lead/fields/DR_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_Opportunity_Name__c</fullName>
    <description>Formula field End User Company – Deal Type – End User Contact Name</description>
    <formula>LEFT(Company &amp; &apos; - &apos; &amp; TEXT(DR_Deal_Type__c) &amp; &apos; - &apos; &amp; FirstName &amp; &apos; &apos; &amp; LastName &amp; &apos; &apos; &amp; DR_Program_Name__c &amp; &apos; - &apos; &amp; DR_Partner_Sales_Rep_Company__r.Name , 120)</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>