force-app/main/default/objects/Lead/fields/DR_Partner_Sales_Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Account_Manager_Name__c</fullName>
    <label>Partner Sales/Account Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>