force-app/main/default/objects/Lead/fields/DR_Partner_Sales_Account_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Account_Manager_Phone__c</fullName>
    <label>Partner Sales/Account Manager Phone</label>
    <type>Phone</type>
</CustomField>