force-app/main/default/objects/Lead/fields/DR_Partner_Sales_Rep_Company__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Rep_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales Rep Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partner Sales Rep Company)</relationshipLabel>
    <relationshipName>DealRegPSRCLeads</relationshipName>
    <type>Lookup</type>
</CustomField>