force-app/main/default/objects/Lead/fields/DR_Partner_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales Rep Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Partner Sales Rep Name)</relationshipLabel>
    <relationshipName>DealRegPSRLeads</relationshipName>
    <type>Lookup</type>
</CustomField>