force-app/main/default/objects/Lead/fields/DR_PBM__c.field-meta.xml
<CustomField>
    <fullName>DR_PBM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DR: This field contains the Owner of the &quot;Partner Sales Rep Company&quot;.</description>
    <label>Registration PBM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>