force-app/main/default/objects/Lead/fields/DR_POC_Alt_Soln_Customer_Considering__c.field-meta.xml
<CustomField>
    <fullName>DR_POC_Alt_Soln_Customer_Considering__c</fullName>
    <label>Alternative Solutions/Competitors</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>