force-app/main/default/objects/Lead/fields/DR_POC_Customer_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>DR_POC_Customer_Use_Case__c</fullName>
    <description>Primarily being used for Opp Reg/Jetson and other Lead Registrations.
2020.11.30 - Edit access given to MKTO User for Taiwan DGX Form leads</description>
    <label>Customer Use Case</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>