force-app/main/default/objects/Lead/fields/DR_POC_Details__c.field-meta.xml
<CustomField>
    <fullName>DR_POC_Details__c</fullName>
    <label>POC Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>