force-app/main/default/objects/Lead/fields/DR_POC_Location__c.field-meta.xml
<CustomField>
    <fullName>DR_POC_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC Location</label>
    <referenceTo>Country_List__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>