force-app/main/default/objects/Lead/fields/DR_POC_NVIDIA_Apps_Customer_Utilizing__c.field-meta.xml
<CustomField>
    <fullName>DR_POC_NVIDIA_Apps_Customer_Utilizing__c</fullName>
    <label>NVIDIA Applications Customer Utilizing</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>