force-app/main/default/objects/Lead/fields/DR_Product__c.field-meta.xml
<CustomField>
    <fullName>DR_Product__c</fullName>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_Deal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Primary_Product</valueSetName>
    </valueSet>
</CustomField>