force-app/main/default/objects/Lead/fields/DR_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>DR_Product_Description__c</fullName>
    <label>Product Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>