force-app/main/default/objects/Lead/fields/DR_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_Program_Name__c</fullName>
    <description>Deal Registration</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>