force-app/main/default/objects/Lead/fields/DR_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_Deal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vGPU SW Opp Reg</fullName>
            </value>
            <value>
                <fullName>vGPU SW Opp Reg EDU</fullName>
            </value>
            <value>
                <fullName>DGX Opp Reg</fullName>
            </value>
            <value>
                <fullName>DGX Opp Reg EDU</fullName>
            </value>
            <value>
                <fullName>DGX Opp Reg Inception</fullName>
            </value>
            <value>
                <fullName>Evaluation Testing</fullName>
            </value>
            <value>
                <fullName>POC Development</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DLI Opp Reg</fullName>
            </value>
            <value>
                <fullName>DGX Opp Reg New Logo</fullName>
            </value>
            <value>
                <fullName>Parabricks Opp Reg</fullName>
            </value>
            <value>
                <fullName>Parabricks Opp Reg EDU</fullName>
            </value>
            <value>
                <fullName>AI Starter Kit</fullName>
                <isActive>false</isActive>
                <label>AI Starter Kit</label>
            </value>
            <value>
                <fullName>Both AI Starter Kit and PTWG</fullName>
                <isActive>false</isActive>
                <label>Both AI Starter Kit and PTWG</label>
            </value>
            <value>
                <fullName>DGX Station Jumpstart</fullName>
                <isActive>false</isActive>
                <label>DGX Station Jumpstart</label>
            </value>
            <value>
                <fullName>Paint the World Gold</fullName>
                <isActive>false</isActive>
                <label>Paint the World Gold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>