force-app/main/default/objects/Lead/fields/DR_Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Registration_Close_Date__c</fullName>
    <description>Deal Reg : Registration Close Date</description>
    <inlineHelpText>Registration Close Date</inlineHelpText>
    <label>Registration Close Date</label>
    <type>Date</type>
</CustomField>