force-app/main/default/objects/Lead/fields/DR_Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Registration_Expiration_Date__c</fullName>
    <description>This field is being used by Deal Registration.</description>
    <formula>IF(NOT(ISBLANK(DR_Approved_Date__c)), DR_Approved_Date__c + 90, Null)</formula>
    <label>Registration Expiration Date</label>
    <type>Date</type>
</CustomField>