force-app/main/default/objects/Lead/fields/DR_Registration_Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>DR_Registration_Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is being used by Deal Registration.</description>
    <label>Registration Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>