force-app/main/default/objects/Lead/fields/DR_Secondary_Product__c.field-meta.xml
<CustomField>
    <fullName>DR_Secondary_Product__c</fullName>
    <description>Deal Registration</description>
    <label>Secondary Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_Deal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX Station A100-40G</fullName>
            </value>
            <value>
                <fullName>DGX Station A100-80G</fullName>
            </value>
            <value>
                <fullName>DGX A100 40GB HW</fullName>
            </value>
            <value>
                <fullName>DGX A100 80G Full</fullName>
            </value>
            <value>
                <fullName>vGPU vApps Perp - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vApps Subs 1yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vApps Subs 3yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vApps Subs 4yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vApps Subs 5yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vPC Perpetual - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vPC Subs 1yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vPC Subs 3yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vPC Subs 4yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vPC Subs 5yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vWS Perp - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vWS Subs 1yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vWS Subs 3yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vWS Subs 4yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU vWS Subs 5yr - GRID</fullName>
            </value>
            <value>
                <fullName>vGPU Virtual Compute Server Subs 1yr - GRID</fullName>
            </value>
            <value>
                <fullName>Tesla P4</fullName>
            </value>
            <value>
                <fullName>Tesla P40</fullName>
            </value>
            <value>
                <fullName>Tesla V100 PCIE-16GB</fullName>
            </value>
            <value>
                <fullName>Tesla P6</fullName>
            </value>
            <value>
                <fullName>Tesla M10</fullName>
            </value>
            <value>
                <fullName>Tesla M60</fullName>
            </value>
            <value>
                <fullName>Tesla P100 PCIE-16GB</fullName>
            </value>
            <value>
                <fullName>Tesla T4</fullName>
            </value>
            <value>
                <fullName>AI Starter Kit</fullName>
            </value>
            <value>
                <fullName>Quadro RTX5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>