force-app/main/default/objects/Lead/fields/DR_Secondary_SKU__c.field-meta.xml
<CustomField>
    <fullName>DR_Secondary_SKU__c</fullName>
    <description>Deal Registration</description>
    <label>Secondary SUMS/Support</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_Secondary_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX-1 V100 CMR 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 CMR 2yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 CMR 3yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 CMR 4yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 CMR 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 Supt 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 Supt 2yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 Supt 3yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 Supt 4yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 Supt 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 SDMR 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 SDMR 2yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 SDMR 3yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 SDMR 4yr</fullName>
            </value>
            <value>
                <fullName>DGX-1 V100 SDMR 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 Supt 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 Supt 2yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 Supt 3yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 Supt 4yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 Supt 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 SDMR 1y</fullName>
                <label>DGX-2 V100 SDMR 1yr</label>
            </value>
            <value>
                <fullName>DGX-2 V100 SDMR 2y</fullName>
                <label>DGX-2 V100 SDMR 2yr</label>
            </value>
            <value>
                <fullName>DGX-2 V100 SDMR 3y</fullName>
                <label>DGX-2 V100 SDMR 3yr</label>
            </value>
            <value>
                <fullName>DGX-2 V100 SDMR 4yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 SDMR 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-2H V100 Supt 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-2H V100 Supt 3yr</fullName>
            </value>
            <value>
                <fullName>DGX-2H V100 Supt 5yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 CMR 1yr</fullName>
            </value>
            <value>
                <fullName>DGX-2 V100 CMR 3yr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>