force-app/main/default/objects/Lead/fields/DR_Secondary_SKU_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DR_Secondary_SKU_Quantity__c</fullName>
    <description>Deal Registration</description>
    <label>Secondary Product Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>