force-app/main/default/objects/Lead/fields/DR_SKU_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DR_SKU_Quantity__c</fullName>
    <label>Primary Product Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>