force-app/main/default/objects/Lead/fields/DR_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>