force-app/main/default/objects/Lead/fields/EDU_Authorizations_Specializations__c.field-meta.xml
<CustomField>
    <fullName>EDU_Authorizations_Specializations__c</fullName>
    <inlineHelpText>Please list Education/Academic authorizations/specializations</inlineHelpText>
    <label>EDU Authorizations/Specializations</label>
    <type>TextArea</type>
</CustomField>