force-app/main/default/objects/Lead/fields/EGX_Customer_Interest__c.field-meta.xml
<CustomField>
    <fullName>EGX_Customer_Interest__c</fullName>
    <label>EGX Customer Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study/Learning</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>