force-app/main/default/objects/Lead/fields/EGX_Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>EGX_Priority_Level__c</fullName>
    <inlineHelpText>PO = AI/App is Helm ready for Pilot, IT has EGX systems ready for Pilot
P1 = AI/App is NOT Helm ready, can get EGX systems
P2 = AI/App choice selection not started and no EGX systems available
P3 = IT Due Diligence only</inlineHelpText>
    <label>EGX Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>