force-app/main/default/objects/Lead/fields/Email_custom__c.field-meta.xml
<CustomField>
    <fullName>Email_custom__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address.</description>
    <label>Email (custom)</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>