force-app/main/default/objects/Lead/fields/EmailConnect_Date__c.field-meta.xml
<CustomField>
    <fullName>EmailConnect_Date__c</fullName>
    <description>Value set from DemadTools &gt; EmailConnect</description>
    <label>EmailConnect Date</label>
    <type>Date</type>
</CustomField>