force-app/main/default/objects/Lead/fields/EmailInvalid__c.field-meta.xml
<CustomField>
    <fullName>EmailInvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo Field for reporting</description>
    <label>Email Invalid</label>
    <type>Checkbox</type>
</CustomField>