force-app/main/default/objects/Lead/fields/EmailInvalidCause__c.field-meta.xml
<CustomField>
    <fullName>EmailInvalidCause__c</fullName>
    <description>Marketo Field for reporting</description>
    <label>Email Invalid Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>