force-app/main/default/objects/Lead/fields/Ent_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Ent_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Opt-In</label>
    <type>Checkbox</type>
</CustomField>