force-app/main/default/objects/Lead/fields/Ent_Opt_In_Opt_Out_NCID_Source__c.field-meta.xml
<CustomField>
    <fullName>Ent_Opt_In_Opt_Out_NCID_Source__c</fullName>
    <label>Ent Opt-In - Opt-Out NCID Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>