force-app/main/default/objects/Lead/fields/Ent_Topic_AI_and_DL_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_AI_and_DL_Opt_Out_Date__c</fullName>
    <label>Ent Topic - AI and DL Opt-Out Date</label>
    <type>Date</type>
</CustomField>