force-app/main/default/objects/Lead/fields/Ent_Topic_AI_and_DL_Source__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_AI_and_DL_Source__c</fullName>
    <label>Ent Topic - AI and DL Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>