force-app/main/default/objects/Lead/fields/Ent_Topic_Design_Pro_Viz_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Design_Pro_Viz_Opt_Out_Date__c</fullName>
    <label>Ent Topic - Design Pro Viz Opt-Out Date</label>
    <type>Date</type>
</CustomField>