force-app/main/default/objects/Lead/fields/Ent_Topic_Machines__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_Machines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ent Topic - Machines</label>
    <type>Checkbox</type>
</CustomField>