force-app/main/default/objects/Lead/fields/Enterprise_Segment__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Segment__c</fullName>
    <label>Enterprise Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deep Learning</fullName>
            </value>
            <value>
                <fullName>GPU Virtualization</fullName>
            </value>
            <value>
                <fullName>High Performance Computing</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>Professional Visualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>