force-app/main/default/objects/Lead/fields/Est_First_Yr_Rev_from_NV_PRD_Sales_USD__c.field-meta.xml
<CustomField>
    <fullName>Est_First_Yr_Rev_from_NV_PRD_Sales_USD__c</fullName>
    <description>SDS-2103-New SFDC Lead Record Fields for Online App Form</description>
    <inlineHelpText>Estimated first year revenue from NVIDIA product sales (USD)</inlineHelpText>
    <label>Est. First Yr Rev from NV PRD Sales(USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>