force-app/main/default/objects/Lead/fields/Fluency_in_Language__c.field-meta.xml
<CustomField>
    <fullName>Fluency_in_Language__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>Fluency in Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Traditional Chinese</fullName>
            </value>
            <value>
                <fullName>Simplified Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>